feat: Shorten URL with Base 62

--- a/find_pharmacy/src/main/resources/templates/main.hbs
+++ b/find_pharmacy/src/main/resources/templates/main.hbs
@@ -53,7 +53,7 @@
 
     <!-- Kakao 우편번호 서비스 -->
     <!-- https://postcode.map.daum.net/guide -->
-    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+    <script src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
         window.onload = function() {
             document.getElementById("address_kakao").addEventListener("click", function(){
